--- a/index.html
+++ b/index.html
@@ -18,21 +18,28 @@
 
 <body>
   <!-- NAVIGATOR BAR -->
-  <nav class="navbar navbar-expand-lg bg-dark">
-    <ul class="nav navbar-nav">
-      <li class="nav-item">
-        <a href="#" class="nav-link text-danger"><span class="link-text text-white">Home</span></a>
-      </li>
-      <li class="nav-item">
-        <a href="#" class="nav-link text-danger"><span class="link-text text-white">About</span></a>
-      </li>
-      <li class="nav-item">
-        <a href="#" class="nav-link text-danger"><span class="link-text text-white">Portfolio</span></a>
-      </li>
-      <li class="nav-item">
-        <a href="#" class="nav-link text-danger"><span class="link-text text-white">Contact</span></a>
-      </li>
-    </ul>
+  <nav class="navbar navbar-expand-sm bg-dark">
+    <!-- Toggler/collapsibe Button -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon bg-light">hihi</span>
+    </button>
+    <!-- Navbar links -->
+    <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
+      <ul class="nav navbar-nav">
+        <li class="nav-item">
+          <a href="#" class="nav-link text-danger"><span class="link-text text-white">Home</span></a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link text-danger"><span class="link-text text-white">About</span></a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link text-danger"><span class="link-text text-white">Portfolio</span></a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link text-danger"><span class="link-text text-white">Contact</span></a>
+        </li>
+      </ul>
+    </div>
   </nav>
   <!-- END OF NAVIGATOR BAR -->
 
@@ -48,8 +55,8 @@
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
     crossorigin="anonymous"></script>
 
-    <!-- Custom script -->
-    <script src="js/script.js"></script>
+  <!-- Custom script -->
+  <script src="js/script.js"></script>
 </body>
 
 </html>
