--- a/index.html
+++ b/index.html
@@ -16,12 +16,25 @@
   <title>Portfolio</title>
 </head>
 
+
+
 <body>
+ 
+  <!-- INTRODUCTION -->
+  <div class="jumbotron-fluid">
+    <div class="container" id="introduction">
+      <br><br><br><br><br><br>
+      <h1>Hello world!</h1>
+      <h1>I am <span class="text-danger">Hieu Ngo</span>, just a noob developer :P</h1>
+    </div>
+  </div>
+  <!-- END OF INTRODUCTION -->
+
   <!-- NAVIGATOR BAR -->
-  <nav class="navbar navbar-expand-sm bg-dark">
+  <nav class="navbar navbar-expand-sm bg-dark sticky-top">
     <!-- Toggler/collapsibe Button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-      <span class="navbar-toggler-icon bg-light">hihi</span>
+      <span class="navbar-toggler-icon bg-light"></span>
     </button>
     <!-- Navbar links -->
     <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
@@ -42,6 +55,14 @@
     </div>
   </nav>
   <!-- END OF NAVIGATOR BAR -->
+
+  <!-- PAGE CONTENT -->
+  <div class="page-content" >
+  </div>
+  <!-- END OF PAGE CONTENT -->
+
+
+
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
