Add icons to jumbotron

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="css/global.css">
@@ -19,13 +20,23 @@
 
 
 <body>
- 
+
   <!-- INTRODUCTION -->
   <div class="jumbotron-fluid">
     <div class="container" id="introduction">
-      <br><br><br><br><br><br>
-      <h1>Hello world!</h1>
-      <h1>I am <span class="text-danger">Hieu Ngo</span>, just a noob developer :P</h1>
+      <br><br><br><br>
+      <div class="display-1">Hello world!</div>
+      <h3>I am <span class="text-danger">Hieu Ngo</span>, just a noob developer :P</h3>
+      <br>
+      <p>
+        <a href="https://www.linkedin.com/in/cpulover/" target="_blank">
+          <i class="fa fa-linkedin"></i>
+        </a>
+        <a href="https://github.com/cpulover" target="_blank">
+          <i class="fa fa-github-square"></i>
+        </a>
+      </p>
+
     </div>
   </div>
   <!-- END OF INTRODUCTION -->
@@ -57,7 +68,7 @@
   <!-- END OF NAVIGATOR BAR -->
 
   <!-- PAGE CONTENT -->
-  <div class="page-content" >
+  <div class="page-content">
   </div>
   <!-- END OF PAGE CONTENT -->
 
