--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
 
 
-<body>
+<body data-spy="scroll" data-target="#navbar">
 
   <!-- INTRODUCTION -->
-  <div class="jumbotron-fluid">
+  <div class="jumbotron-fluid" id="home" >
     <div class="container" id="introduction">
       <br><br><br><br>
       <div class="display-1">Hello world!</div>
@@ -42,7 +42,7 @@
   <!-- END OF INTRODUCTION -->
 
   <!-- NAVIGATOR BAR -->
-  <nav class="navbar navbar-expand-sm bg-dark sticky-top">
+  <nav id="navbar" class="navbar navbar-expand-sm bg-dark sticky-top">
     <!-- Toggler/collapsibe Button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon bg-light"></span>
@@ -51,26 +51,42 @@
     <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
       <ul class="nav navbar-nav">
         <li class="nav-item">
-          <a href="#" class="nav-link text-danger"><span class="link-text text-white">Home</span></a>
+          <a href="#home" class="nav-link text-danger"><span class="link-text text-white">Home</span></a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link text-danger"><span class="link-text text-white">About</span></a>
+          <a href="#about" class="nav-link text-danger"><span class="link-text text-white">About</span></a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link text-danger"><span class="link-text text-white">Portfolio</span></a>
+          <a href="#portfolio" class="nav-link text-danger"><span class="link-text text-white">Portfolio</span></a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link text-danger"><span class="link-text text-white">Contact</span></a>
+          <a href="#contact" class="nav-link text-danger"><span class="link-text text-white">Contact</span></a>
         </li>
       </ul>
     </div>
   </nav>
   <!-- END OF NAVIGATOR BAR -->
 
-  <!-- PAGE CONTENT -->
-  <div class="page-content">
+  <!-- ABOUT ME -->
+  <div class="page-content" id="about">
+    <br><br><br>
+    <h1>About Me</h1>
   </div>
-  <!-- END OF PAGE CONTENT -->
+  <!-- END OF ABOUT ME -->
+
+  <!-- PORTFOLIO -->
+  <div class="page-content" id="portfolio">
+    <br><br><br>
+    <h1>Highlight Projects</h1>
+  </div>
+  <!-- END OF PORTFOLIO -->
+
+  <!-- CONTACT -->
+  <div class="page-content" id="contact">
+    <br><br><br>
+    <h1>Contact</h1>
+  </div>
+  <!-- END OF CONTACT -->
 
 
 
