--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="css/global.css">
 
-  <title>Portfolio</title>
+  <title>noob</title>
 </head>
 
 
@@ -22,7 +22,7 @@
 <body data-spy="scroll" data-target="#navbar">
 
   <!-- INTRODUCTION -->
-  <div class="jumbotron-fluid" id="home" >
+  <div class="jumbotron-fluid" id="home">
     <div class="container" id="introduction">
       <br><br><br><br>
       <div class="display-1">Hello world!</div>
@@ -30,10 +30,13 @@
       <br>
       <p>
         <a href="https://www.linkedin.com/in/cpulover/" target="_blank">
-          <i class="fa fa-linkedin"></i>
+          <i class="fa fa-linkedin-square"></i>
         </a>
         <a href="https://github.com/cpulover" target="_blank">
           <i class="fa fa-github-square"></i>
+        </a>
+        <a href="https://www.instagram.com/justacpulover/?hl=en" target="_blank">
+          <i class="fa fa-instagram"></i>
         </a>
       </p>
 
@@ -71,13 +74,86 @@
   <div class="page-content" id="about">
     <br><br><br>
     <h1>About Me</h1>
+    <br><br><br>
+    <div class="container">
+      <div class="row ">
+        <div class="col-lg">
+          <div class="row d-flex justify-content-center">
+            <img id="avt" src="images/avt.jpg" class="rounded-circle" alt="">
+          </div>
+          <br>
+          <div class="row d-flex justify-content-center">
+            <h5>I like creating stuffs, good stuffs.</h5>
+          </div>
+          <br>
+        </div>
+        <div class="col-lg">
+          <div class="row-lg">
+            <h5 class="progress-label">Java</h5>
+            <div class="progress">
+              <div class="progress-bar bg-dark" style="width:85%"></div>
+            </div>
+          </div>
+          <br>
+          <div class="row-lg">
+            <h5 class="progress-label">Java</h5>
+            <div class="progress">
+              <div class="progress-bar bg-dark" style="width:85%"></div>
+            </div>
+          </div>
+          <br>
+          <div class="row-lg">
+            <h5 class="progress-label">Java</h5>
+            <div class="progress">
+              <div class="progress-bar bg-dark" style="width:85%"></div>
+            </div>
+          </div>
+          <br>
+          <div class="row-lg">
+            <h5 class="progress-label">Java</h5>
+            <div class="progress">
+              <div class="progress-bar bg-dark" style="width:85%"></div>
+            </div>
+          </div>
+          <br>
+          <div class="row-lg">
+            <h5 class="progress-label">Java</h5>
+            <div class="progress">
+              <div class="progress-bar bg-dark" style="width:85%"></div>
+            </div>
+          </div>
+          <br>
+          <div class="row-lg">
+            <h5 class="progress-label">Java</h5>
+            <div class="progress">
+              <div class="progress-bar bg-dark" style="width:85%"></div>
+            </div>
+          </div>
+          <br>
+          <div class="row-lg">
+            <h5 class="progress-label">Java</h5>
+            <div class="progress">
+              <div class="progress-bar bg-dark" style="width:85%"></div>
+            </div>
+          </div>
+          <br>
+          <div class="row-lg">
+            <h5 class="progress-label">Java</h5>
+            <div class="progress">
+              <div class="progress-bar bg-dark" style="width:85%"></div>
+            </div>
+          </div>
+          
+        </div>
+      </div>
+    </div>
   </div>
   <!-- END OF ABOUT ME -->
 
   <!-- PORTFOLIO -->
   <div class="page-content" id="portfolio">
     <br><br><br>
-    <h1>Highlight Projects</h1>
+    <h1 class="text-white">Highlight Projects</h1>
   </div>
   <!-- END OF PORTFOLIO -->
 
